--- a/.gitmodules
+++ b/.gitmodules
@@ -535,3 +535,6 @@
 [submodule "Intermediate/14524c5d685360ba828aa10f184be1eb"]
 	path = Intermediate/challenge-26
 	url = https://gist.github.com/14524c5d685360ba828aa10f184be1eb.git
+[submodule "Intermediate/f178ec69453c7834fdeeb5f8e236f277"]
+	path = Intermediate/challenge-27
+	url = https://gist.github.com/f178ec69453c7834fdeeb5f8e236f277.git
