--- a/.gitmodules
+++ b/.gitmodules
@@ -538,3 +538,6 @@
 [submodule "Intermediate/f178ec69453c7834fdeeb5f8e236f277"]
 	path = Intermediate/challenge-27
 	url = https://gist.github.com/f178ec69453c7834fdeeb5f8e236f277.git
+[submodule "Intermediate/4e1bf04b80c3b4b27f120e9cf9126e53"]
+	path = Intermediate/challenge-29
+	url = https://gist.github.com/4e1bf04b80c3b4b27f120e9cf9126e53.git
