--- a/.gitmodules
+++ b/.gitmodules
@@ -550,3 +550,6 @@
 [submodule "Intermediate/3dd6994a06c794d9f7cc8a1cfa989bbc"]
 	path = Intermediate/challenge-36
 	url = https://gist.github.com/3dd6994a06c794d9f7cc8a1cfa989bbc.git
+[submodule "Intermediate/8e4e6e3a9fb67a0dc4d197a3fada601d"]
+	path = Intermediate/challenge-39
+	url = https://gist.github.com/8e4e6e3a9fb67a0dc4d197a3fada601d.git
