--- a/.gitmodules
+++ b/.gitmodules
@@ -571,3 +571,6 @@
 [submodule "Intermediate/8347e302276e4f149ca6b6e666954606"]
 	path = Intermediate/challenge-49
 	url = https://gist.github.com/8347e302276e4f149ca6b6e666954606.git
+[submodule "Intermediate/196f03633aecba5ffee61e90cd3a463a"]
+	path = Intermediate/challenge-53
+	url = https://gist.github.com/196f03633aecba5ffee61e90cd3a463a.git
