--- a/.gitmodules
+++ b/.gitmodules
@@ -604,3 +604,6 @@
 [submodule "Intermediate/challenge-76"]
 	path = Intermediate/challenge-76
 	url = https://gist.github.com/95555cc4ef5a88e81d1df33607f3ada0.git
+[submodule "Intermediate/challenge-80"]
+	path = Intermediate/challenge-80
+	url = https://gist.github.com/860342546e5780cc2cff2fff0bab67b5.git
