--- a/.gitmodules
+++ b/.gitmodules
@@ -610,3 +610,6 @@
 [submodule "Intermediate/challenge-83"]
 	path = Intermediate/challenge-83
 	url = https://gist.github.com/3fcb79fd2c5023de0284949602d546a2.git
+[submodule "Intermediate/challenge-85"]
+	path = Intermediate/challenge-85
+	url = https://gist.github.com/a705d3706e4cbd5b8650599dd686be67.git
