git add challenge-140

--- a/.gitmodules
+++ b/.gitmodules
@@ -664,3 +664,6 @@
 [submodule "Intermediate/challenge-139"]
 	path = Intermediate/challenge-139
 	url = https://gist.github.com/582e7823b5993450bd36a42cbe5f5d8e.git
+[submodule "Intermediate/4f12da4c3b5d9f23782f5d621a561f0e"]
+	path = Intermediate/4f12da4c3b5d9f23782f5d621a561f0e
+	url = https://gist.github.com/4f12da4c3b5d9f23782f5d621a561f0e.git
